Rework linux to project panama