@@ -9,13 +9,19 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
+            <version>1.18.16</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>FileFragmentationAnalysisNative</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <type>nar</type>
+        </dependency>-->
+        <dependency>
+            <groupId>me.nithanim.filefragmentationanalysis</groupId>
+            <artifactId>FileFragmentationAnalysisNative</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <optional>true</optional>
         </dependency>
         <!--<dependency>
             <groupId>${project.groupId}</groupId>
@@ -39,7 +45,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
-            <version>4.1.22.Final</version>
+            <version>4.1.54.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -87,9 +93,16 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.foreign</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.github.maven-nar</groupId>
